--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <button onclick="nextPhase(true)">Get Started</button>
         </div>
     </div>
+    <div class="disclaimer">
+        This tool uses Steam's public CDN structure. All game assets are 
+        property of their respective copyright holders. Not affiliated with Valve.
+    </div>
 
     <!-- Phase 2: Input Form -->
     <div class="phase" id="phase2">
